2008-03-25  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c:
	(_gdk_quartz_events_trigger_crossing_events): Bail out early if we
	can't find a matching window.

	* gdk/quartz/gdkwindow-quartz.c: (show_window_internal): Add a
	comment, and only trigger an event for non-temp windows, fixes
	problems for tooltips caused by the workarounds for the
	problematic tracking rect API.

2008-03-25  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c:
	(gdk_window_quartz_process_all_updates): Plug a leak and add a
	check that we have a toplevel before accessing it.

2008-03-24  Tor Lillqvist  <tml@novell.com>

	Bug 524151 - Dragging of 0-byte files results in an empty filename
	on Windows XP and above

	* gdk/win32/gdkdnd-win32.c (resolve_link): Check for the file
	being empty first. For some reason ISHellLink and IPersistFile
	succeeds in interpreting empty files as shortcuts, claiming the
	target of the shortcut is an empty path.

	Change the function to take the wide character file name that the
	caller already has anyway, to avoid a superfluous conversion from
	UTF-8 to UTF-16.

2008-03-23  Björn Lindqvist  <bjourne@gmail.com>

	* gdk-pixbuf/gdk-pixbuf-io.c (gdk_pixbuf_new_from_xpm_data): Guard
	against NULL pointer. (#467051, Gian Mario Tagliaretti)

2008-03-23  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkevents-win32.c (show_window_recurse):
	Check window state for GDK_WINDOW_STATE_ICONIFIED before doing
	ShowWindow (SW_RESTORE).  This fixes a problem where tearing off
	menus from a maximized window would force the window to restore
	its size. (#518846)

2008-03-23  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-builder-convert:
	Properly convert GtkImageMenuItems which use stock labels but don't
	have any children.
	(#523932, Brian Pepple)
	
2008-03-22  Matthew Barnes  <mbarnes@redhat.com>

	* gtk/gtkentrycompletion.c (gtk_entry_completion_get_cells):
	New function implements GtkCellLayoutClass::get_cells.  (#523787)
